# ls3thumb

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  class_factory.cpp  class_factory.hpp  debug.hpp  dllmain.cpp  dllmain.def  guid.hpp  shell_ext.cpp  shell_ext.hpp  test_preview.cpp  test_thumbnail.cpp
Ls3Thumb/: Ls3File.h  Ls3FileModificationDate.cpp  Ls3FileModificationDate.h  Ls3FileReader.cpp  Ls3FileReader.h  Ls3FileRenderer.cpp  Ls3FileRenderer.h  Ls3Thumb.cpp  Ls3Thumb.def  Ls3Thumb.idl  Ls3Thumb.rc  Ls3Thumb.sln  Ls3Thumb.vcxproj  Ls3Thumb.vcxproj.filters  Ls3ThumbShlExt.cpp  Ls3ThumbShlExt.h  Ls3ThumbShlExt.rgs  Ls3Thumb_i.h  Ls3ThumbnailRenderer.cpp  Ls3ThumbnailRenderer.h  LsFileReader.cpp  LsFileReader.h  ReadMe.txt  Resource.h  dlldata.c  dllmain.cpp  dllmain.h  resource.h  stdafx.cpp  xdlldata.c
Ls3ThumbTest/: Ls3ThumbTest.vcxproj  Main.cpp
Ls3ThumbUtils/: Ls3ThumbUtils.vcxproj  Ls3ThumbUtils.vcxproj.filters  ReadMe.txt
ls3render/: CMakeLists.txt  macros.hpp  render_object.hpp  scene.cpp  scene.hpp  shader.cpp  shader.hpp  shader_parameters.hpp  texture.hpp  utils.hpp  window.cpp  window.hpp
ls3render/assets/: fragment_shader.glsl  vertex_shader.glsl
metabuild/: CMakeLists.txt
